--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "element-ui": "^2.3.3",
+    "eslint-plugin-html": "^4.0.2",
+    "normalize.css": "^8.0.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
@@ -37,7 +40,8 @@
     "copy-webpack-plugin": "^4.0.1",
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.28.0",
-    "eslint": "^4.15.0",
+    "eslint": "^4.19.1",
+    "eslint-config-elemefe": "^0.3.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
